--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,24 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+        <!-- CUSTOMIZED COLORS   -->
     <color name="lightGray">#D1D1D1</color>
     <color name="gold">#FF9800</color>
     <color name="danger">#F42314</color>
+
+        <!--  NEURMOPHISM   -->
+    <color name="background">#E4EBF5</color>
+    <color name="secondary_text">#7D818A</color>
+    <color name="dark_shadow">#CDD5EA</color>
+    <color name="light_shadow">#F8F9FE</color>
+    <color name="dark_icon">#212121</color>
+
+
+
+
+
+
 
 </resources>
